# LegacyLogger

./: .gitignore  .travis.yml  CMakeLists.txt  DevToolsLogConfig.cmake  Makefile  README.md  buildDeps.sh
include/: logger.h
src/: logger.cpp
